--- a/client/app/assets/scss/_header.scss
+++ b/client/app/assets/scss/_header.scss
@@ -1,15 +1,34 @@
 header {
-  nav {
+  nav.header-navbar {
     .navbar-header {
       height: 50px;
       .navbar-brand {
         &.icon {  
+          transition: all 0.3s ease;
           margin-top: 20px;
           margin-right: 20px;
           width: 100px;
           height: 100px;
           background-color: #EF6447;
-          img {
+          svg {
+            height: 75px;
+            transition: all 0.3s ease;
+            width: 70px;
+          }
+        }
+      }
+    }
+    &.scrolled {
+      .navbar-brand {
+        &.icon {  
+          padding-top: 0;
+          margin-top:0;
+          width: 100px;
+          height: 50px;
+          background: none;
+          svg {
+            fill:#FFFFFF;
+            height: 50px;
             width: 70px;
           }
         }
