feat: add barber profile and style detail view templates

--- a/client/app/assets/scss/app.scss
+++ b/client/app/assets/scss/app.scss
@@ -7,6 +7,9 @@
 @import "header";
 @import "footer";
 @import "home";
+@import "barber-profile";
+@import "style-detail";
+
 
 html {
   -webkit-font-smoothing: antialiased;
