style: add logo font icon, add favicon

--- a/client/app/assets/scss/app.scss
+++ b/client/app/assets/scss/app.scss
@@ -3,6 +3,7 @@
 @import "bootstrap-theme";
 @import "previous";
 @import "font-awesome";
+@import "fonts";
 @import "variables";
 @import "header";
 @import "footer";
