--- a/client/app/assets/scss/_header.scss
+++ b/client/app/assets/scss/_header.scss
@@ -10,10 +10,11 @@ header {
           width: 100px;
           height: 100px;
           background-color: #EF6447;
-          svg {
-            height: 75px;
+          text-align: center;
+          .icon-mustache {
             transition: all 0.3s ease;
-            width: 70px;
+            font-size: 70px;
+            color: #000000;
           }
         }
       }
@@ -26,10 +27,9 @@ header {
           width: 100px;
           height: 50px;
           background: none;
-          svg {
-            fill:#FFFFFF;
-            height: 50px;
-            width: 70px;
+          .icon-mustache {
+            color: #FFFFFF;
+            font-size: 50px;
           }
         }
       }
