feat: barbers pages WIP

--- a/client/app/assets/scss/_profile-page.scss
+++ b/client/app/assets/scss/_profile-page.scss
@@ -5,6 +5,7 @@
         .portrait-block{
           .portrait {
             height: 300px;
+            background-size: cover;
           }
         }
         .stats-block {
