style: list-page

--- a/client/app/assets/scss/_header.scss
+++ b/client/app/assets/scss/_header.scss
@@ -9,7 +9,7 @@ header {
           margin-right: 20px;
           width: 100px;
           height: 100px;
-          background-color: #EF6447;
+          background-color: $mainColor;
           text-align: center;
           .icon-mustache {
             transition: color 0.3s ease;
