--- a/client/app/assets/scss/_profile-page.scss
+++ b/client/app/assets/scss/_profile-page.scss
@@ -65,6 +65,7 @@
         padding-left: 0px;
         li {
           display: inline-block;
+          border: 2px solid #FFFFFF;
           .style-block {
             width: 100%;
             height: 100%;
@@ -88,7 +89,7 @@
             }
           }
           &.selected{
-            border: 2px solid #EF6447;
+            border: 2px solid $mainColor;
           }
         }
       }
@@ -109,7 +110,7 @@
       .button-container {
         text-align: center;
         button {
-          background-color: #EF6447;
+          background-color: $mainColor;
           color: #FFF;
           width: 50%;
           text-transform: capitalize;
