--- a/client/app/assets/scss/app.scss
+++ b/client/app/assets/scss/app.scss
@@ -20,6 +20,15 @@ html {
   }
 }
 
-body {
-
+// Clear Fix
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+.cf:after {
+    clear: both;
+}
+.cf {
+    *zoom: 1;
 }
