--- a/client/app/assets/scss/_list-page.scss
+++ b/client/app/assets/scss/_list-page.scss
@@ -1,11 +1,21 @@
 .list-page {
   .list-element-container {
     .list-element {
+      position: relative;
+      .maximize {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        background: rgba(0,0,0,0.5);
+        border: none;
+        color: white;
+        border-radius: 50%;
+      }
       .picture {
-          height: 200px;
-          width: 100%;
-          background-size: cover;
-          display: block;
+        height: 200px;
+        width: 100%;
+        background-size: cover;
+        display: block;
       }
       .barber-info {
         .caption {
@@ -32,6 +42,15 @@
           }
         }
       }
+    }
+  }
+}
+
+#pictureModal {
+  .modal-body {
+    text-align: center;
+    img {
+      max-width: 100%;
     }
   }
 }
