--- a/client/app/assets/scss/_profile-page.scss
+++ b/client/app/assets/scss/_profile-page.scss
@@ -54,53 +54,68 @@
 
   // Style list
   .list-block {
-     .profile-list-container {
-      h2 {
-        font-size: 22px;
-        padding-left: 15px;
-      }
-      ul {
-        overflow: hidden;
-        list-style-type: none;
-        padding-left: 0px;
-        li {
-          display: inline-block;
-          border: 2px solid #FFFFFF;
-          .style-block {
+   .profile-list-container {
+    h2 {
+      font-size: 22px;
+      padding-left: 15px;
+    }
+    ul {
+      overflow: hidden;
+      list-style-type: none;
+      padding-left: 0px;
+      li {
+        display: inline-block;
+        border: 2px solid #FFFFFF;
+        .style-block {
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          background-size: cover;
+          position: relative;
+          .maximize {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            background: rgba(0,0,0,0.5);
+            border: none;
+            color: white;
+            border-radius: 50%;
+          }
+          .size-fix {
+            color: rgba(0,0,0,0);
+          }
+          &:after {
+            content:"";
             width: 100%;
-            height: 100%;
-            text-align: center;
-            background-size: cover;
-            &:after {
-              content:"";
-              width: 100%;
-              display: block;
-              margin-top: 100%;
-            }
-            span {
-              position: relative;
-              top: 20px;
-              background-color: rgba(0,0,0,0.5);
-              color: white;
-              font-weight: bold;
-              padding: 5px 10px;
-              border-radius: 5px;
-              border: 1px solid rgba(255, 255, 255, 0.5);
-            }
+            display: block;
+            margin-top: 100%;
           }
-          &.selected{
-            border: 2px solid $mainColor;
+          .style-title {
+            position: absolute;
+            bottom: 5px;
+            left: 5px;
+            right: 5px;
+            background-color: rgba(0,0,0,0.5);
+            color: white;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 5px;
+            border: 1px solid rgba(255, 255, 255, 0.5);
           }
+        }
+        &.selected{
+          border: 2px solid $mainColor;
         }
       }
     }
-    .style-require-error {
-      font-size: 12px;
-      font-weight: bold;
-      text-align: center;
-      margin-bottom: 0px;
-    }
   }
+  .style-require-error {
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 0px;
+  }
+}
 
   // Form Submit
   .order-block {
