--- a/client/app/assets/scss/_home.scss
+++ b/client/app/assets/scss/_home.scss
@@ -1,3 +1,24 @@
+#myCarousel {
+  .carousel-indicators {
+    bottom: 0px;
+  }
+  .carousel-inner {
+    .item {
+      height: 300px;
+      background-size: cover;
+      .carousel-caption {
+        padding: 10px 15px;
+        background-color: rgba(0,0,0,0.5);
+        border-radius: 5px;
+        bottom: 50px;
+        h3 {
+          margin-top: 10px;
+        }
+      }
+    }
+  }
+}
+
 .barber-style-selection {
   padding-top: 30px;
   .selection-link {
@@ -9,28 +30,51 @@
       padding-right: 0px;
     }
     .link {
-      background-color: #000000;
-      opacity: 0.7;
+      border-radius: 5px;
+      background-color: #555;
+      // opacity: 0.7;
       display: table;
       height: 100%;
       width: 100%;
-      transition: all 1s ease;
+      transition: all 0.5s ease;
       text-decoration: none;
       &.barber-link {
       }
       &.style-link {
       }
       .inner-block{
-        font-size: 20px;
+        font-size: 60px;
         text-decoration: none;
-        color: #FFFFFF;
+        color: #000;
         display: table-cell;
         vertical-align: middle;
         text-align: center;
+        font-family: 'Titan One', cursive;
+        background-color: #222;
+        color: transparent;
+        text-shadow: 0px 2px 3px rgba(200,200,200,0.2);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        transition: all 0.5s ease;
       }
       &:hover {
-        opacity: 1;
+        // opacity: 1;
+        background-color: #111;
+        .inner-block {
+          background-color: $mainColor;
+        }
+
       }
+    }
+  }
+}
+@media (max-width: 767px) {
+  .barber-style-selection {
+    .selection-link {
+      padding-left: 0px;
+      padding-right: 0px;
+      margin-bottom: 10px;
     }
   }
 }
