--- a/client/app/assets/scss/_list-page.scss
+++ b/client/app/assets/scss/_list-page.scss
@@ -12,9 +12,10 @@
         border-radius: 50%;
       }
       .picture {
-        height: 200px;
+        height: 300px;
         width: 100%;
         background-size: cover;
+        background-position: 50% 50%;
         display: block;
       }
       .barber-info {
