--- a/client/app/assets/scss/_profile-page.scss
+++ b/client/app/assets/scss/_profile-page.scss
@@ -65,8 +65,8 @@
       padding-left: 0px;
       li {
         display: inline-block;
-        border: 2px solid #FFFFFF;
         .style-block {
+          border: 2px solid #FFFFFF;
           width: 100%;
           height: 100%;
           text-align: center;
@@ -104,7 +104,9 @@
           }
         }
         &.selected{
-          border: 2px solid $mainColor;
+          .style-block {
+            border: 2px solid $mainColor;
+          }
         }
       }
     }
