--- a/client/app/assets/scss/_profile-page.scss
+++ b/client/app/assets/scss/_profile-page.scss
@@ -72,6 +72,7 @@
           text-align: center;
           background-size: cover;
           position: relative;
+          background-position: 50% 50%;
           .maximize {
             position: absolute;
             top: 5px;
